--- a/trunk/.htaccess
+++ b/trunk/.htaccess
@@ -1,5 +1,6 @@
-
 RewriteEngine On
+
+RewriteRule about$ /about.php [L]
 
 RewriteRule ^.*-I([0-9]+)$ /index2.php?index_id=$1 [L]
 RewriteRule ^.*-I([0-9]+)-Sview$ /index2.php?index_id=$1&sort=view [L]
@@ -7,3 +8,10 @@ RewriteRule ^.*-I([0-9]+)-Srate$ /index2.php?index_id=$1&sort=rate [L]
 
 RewriteRule ^.*-P([0-9]+)-L(([a-zA-Z]|-)+)$ /viewtopic.php?id=$1&lang=$2 [L]
 RewriteRule ^.*-P([0-9]+)$ /viewtopic.php?id=$1 [L]
+
+Options -Indexes
+ErrorDocument 404 /nofound.php
+ErrorDocument 403 /nofound.php
+ErrorDocument 401 /nofound.php
+
+
