Added Facebook like buttons
git-svn-id: svn://localhost/home/vnwkrepos/trunk@346 46499d64-588c-4cb2-b276-432f5e434212

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 RewriteEngine On
 
+RewriteCond %{HTTP_HOST} ^vietnamwiki\.net$ [NC]
+RewriteRule ^(.*)$ http://www.vietnamwiki.net/$1 [R=301,L]
+
 RewriteRule ^about$ /about.php [L]
 RewriteRule ^jobs$ /jobs.php [L]
 
